--- a/prueba.ui
+++ b/prueba.ui
@@ -164,7 +164,7 @@ QPushButton:hover
        <rect>
         <x>30</x>
         <y>20</y>
-        <width>91</width>
+        <width>221</width>
         <height>30</height>
        </rect>
       </property>
@@ -174,13 +174,13 @@ QPushButton:hover
        </font>
       </property>
       <property name="text">
-       <string>Código:</string>
+       <string>Nombre del Producto: </string>
       </property>
      </widget>
      <widget class="QLineEdit" name="inputBuscar">
       <property name="geometry">
        <rect>
-        <x>130</x>
+        <x>240</x>
         <y>20</y>
         <width>171</width>
         <height>30</height>
